--- a/index.html
+++ b/index.html
@@ -57,15 +57,14 @@
 <b><p  style="font-size:30px;text-align:center">درباره ما </b><br>
 
 	<b style="font-size:15px;">سلام و احترام <br>
-	امیدواریم از کالا های با کیفیت ما خوشتان امده باشد . هدف ما فقط جلب رضایت شما است<br>
-	جهت برخورد با مشکل به ما گزارش دهید  و تا 24 ساعت شکیبا باشید . درصورت ادامه دار شدن مشکل با پشتیبان تماس بگیرید
+	امیدواریم از کالا های با کیفیت ما خوشتان امده باشد .
 	<br>
 	 تماس با پشتیبان:09159877587
 	<br><br>
 	<div class="container" align="center">
-	<img src="..\images\products\rey2.jpg" class="image">
+	
 	<div class="middle">
-    <div class="text">Web Developer:<br>reyhaneh khajeYazdi </div>
+    <div class="text"><br>reyhaneh khajeYazdi </div>
 	</div>
 	</div>
 </p>
